Preparing for 1.0